fixed table not fitting div

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -231,7 +231,6 @@ h4 {
 	color : rgba(216,216,216,1.00);
 	border: 2px solid black;
 	width: 100%;
-	margin-bottom: 5%;
 	background-color: rgba(0,0,0,0.40);
 }
 tr {
